fix(docs): folder icons css filter inverted and more visible in dark … (#343)
* fix(docs): folder icons css filter inverted and more visible in dark theme

* Revert ":blue_book: doc: add icon"

This reverts commit 9c356adbbc61aef8525555f5a30c14876d458bbb.

* restore bun.lockb to prev version

* restore lifecycle.svg

---------

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -89,10 +89,6 @@ button.copy::after {
     background-image: url(/assets/essential.svg);
 }
 
-#VPSidebarNav > .group:nth-child(3) > .VPSidebarItem > .item > .text::before {
-    background-image: url(/assets/essential.svg);
-}
-
 #VPSidebarNav > .group:nth-child(4) > .VPSidebarItem > .item > .text::before {
     background-image: url(/assets/validation.svg);
 }
@@ -115,6 +111,10 @@ button.copy::after {
 
 #VPSidebarNav > .group:nth-child(9) > .VPSidebarItem > .item > .text::before {
     background-image: url(/assets/integration.svg);
+}
+
+.dark #VPSidebarNav > .group:nth-child(-n + 9):not(:first-child) > .VPSidebarItem > .item > .text::before {
+    filter: invert(1);
 }
 
 #VPSidebarNav > .group {
